maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def KeepHandOnSideWall() {

while(!estSurBiscuit()){
	droite
	if(estFaceMur){gauche
	if(!estFaceMur){
	avance}
	else{gauche
	gauche}}
	else{avance()}}


}
override def run() {
	KeepHandOnSideWall()
	PrendBiscuit
}
